# revive-ethereum-rpc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  metadata.json
.config/: taplo.toml
.github/workflows/: rust-prerequisite.yaml  rust.yml
chain/node/: Cargo.toml  build.rs
chain/node/src/: chain_spec.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
chain/pallet-contracts-evm/: Cargo.toml
chain/pallet-contracts-evm/src/: convert.rs  lib.rs  weights.rs
chain/primitives/: Cargo.toml
chain/primitives/src/: lib.rs  signature.rs  unchecked_extrinsic.rs
chain/runtime/: Cargo.toml  build.rs
chain/runtime/src/: lib.rs
demo/: package-lock.json  package.json
demo/src/: index.html  main.ts
rpc/: Cargo.toml  metadata.scale
rpc/api/: Cargo.toml
rpc/api/src/: adapters.rs  byte.rs  lib.rs  rlp_codec.rs  rpc_methods.rs  rpc_types.rs  signature.rs  type_id.rs
rpc/codegen/: Cargo.toml
rpc/codegen/src/: generator.rs  main.rs  open_rpc.rs  printer.rs
rpc/examples/: 0-rpc-playground.rs  1-sign-raw-transaction.rs  2-send-raw-transaction.rs  3-deploy-dummy.rs  5-balance-tx.rs  6-receipt.rs  7-eth-transfer.rs  deploy-dummy-contract.rs  deploy.rs  dummy.wasm  eth-transfer.rs  get-nonce.rs  rpc-playground.rs  server.rs  transfer.rs
rpc/src/: client.rs  example.rs  lib.rs  main.rs  rpc_methods.rs  subxt_client.rs  tests.rs
