[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/eth-rpc.git"
edition = "2021"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "chain/node",
    "chain/pallet-contracts-evm",
    "chain/runtime",
    "chain/primitives",
    "rpc", 
    "rpc/api",
    "rpc/codegen",
]

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0.86"
clap = { version = "4.5.3", features = ["derive"] }
derive_more = "0.99.17"
env_logger = "0.11.3"
ethereum-types = { version = "0.14.1", features = ["serialize", "codec", "rlp"], default-features = false }
frame = {package = "polkadot-sdk-frame", version = "0.3.0", default-features = false, features = ["experimental", "runtime"] }
futures = { version = "0.3.30", features = ["thread-pool"] }
futures-timer = "3.0.1"
hex = { version = "0.4.3", default-features = false, features = [ "serde"] }
hex-literal = "0.4.1"
hyper = "1.4.1"
indoc = "2.0.5"
jsonrpsee ={ version =  "0.24.0", features = ["full"]  }
lazy_static = "1.4.0"
log = { version = "0.4.21", default-features = false }
parity-scale-codec = { version = "3", features = ["derive"], default-features = false }
polkavm = "0.9.3"
polkavm-derive = "0.9.1"
polkavm-linker = "0.9.2"
pretty_assertions = "1.4.0"
quote = { version = "1.0.33" }
rlp = { version = "0.5.2", default-features = false }
scale-info = { version = "2", features = ["derive"], default-features = false }
secp256k1 = { version = "0.29.0", features = ["recovery"]}
serde = { version = "1.0.197", features = ["derive"], default-features = false  }
serde-big-array = { version = "0.3.2" }
serde_json = { version = "1.0.114", default-features = false }
serde_yaml = { version = "0.9" }
subxt ={ version = "0.36.0", features = ["unstable-reconnecting-rpc-client"] }
subxt-signer = "0.36.0"
syn = { version = "2.0.53" }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing ={ version = "0.1.40"}
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
sc-cli = { version = "0.42.0" }
sc-executor = { version = "0.38.0" }
sc-network = { version = "0.40.0" }
sc-service = { version = "0.41.0" }
sc-telemetry = { version = "20.0.0" }
sc-transaction-pool = { version = "34.0.0" }
sc-transaction-pool-api = { version = "34.0.0" }
sc-consensus = { version = "0.39.1" }
sc-consensus-manual-seal = { version = "0.41.0" }
sc-rpc-api = { version = "0.39.0" }
sc-basic-authorship = { version = "0.40.0" }
sc-offchain = { version = "35.0.0" }
sc-client-api = { version = "34.0.0" }
sp-timestamp = { version = "32.0.0" }
sp-keyring = { version = "37.0.0" }
sp-api = { version = "32.0.0" }
sp-blockchain = { version = "34.0.0" }
sp-block-builder = { version = "32.0.0" }
sp-io = { version = "36.0.0" }
sp-runtime = { version = "37.0.0", default-features = false, features = ["serde"] }
sp-genesis-builder = { version = "0.13.0", default-features = false }
substrate-frame-rpc-system = { version = "34.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-wasm-builder = { version = "22.0.0"}

pallet-balances = { version = "35.0.0", default-features = false }
pallet-contracts = { version = "33.0.0", default-features = false  }
pallet-sudo = { version = "34.0.0", default-features = false }
pallet-timestamp = { version = "33.0.0", default-features = false }
pallet-transaction-payment = { version = "34.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "34.0.0", default-features = false }
