[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
license = "MIT-0"
repository = "https://github.com/paritytech/eth-rpc.git"
version = "0.1.0"

[workspace]
members = [
	"chain/node",
	"chain/pallet-contracts-evm",
	"chain/primitives",
	"chain/runtime",
	"rpc",
	"rpc/api",
	"rpc/codegen",
]
resolver = "2"

[workspace.dependencies]
Inflector = "0.11.4"
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
derive_more = "0.99.18"
env_logger = "0.11.5"
ethereum-types = { version = "0.14.1", features = [
	"codec",
	"rlp",
	"serialize",
], default-features = false }
futures = { version = "0.3.30", features = ["thread-pool"] }
futures-timer = "3.0.3"
hex = { version = "0.4.3", default-features = false, features = ["serde"] }
hex-literal = "0.4.1"
hyper = "1.4.1"
indoc = "2.0.5"
jsonrpsee = { version = "0.24.0", features = ["full"] }
lazy_static = "1.5.0"
log = { version = "0.4.22", default-features = false }
parity-scale-codec = { version = "3", features = [
	"derive",
], default-features = false }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", default-features = false, branch = "master" }
polkavm = "0.9.3"
polkavm-derive = "0.9.1"
polkavm-linker = "0.9.2"
pretty_assertions = "1.4.0"
quote = { version = "1.0.36" }
rlp = { version = "0.5.2", default-features = false }
scale-info = { version = "2", features = ["derive"], default-features = false }
secp256k1 = { version = "0.29.0", features = ["recovery"] }
serde = { version = "1", features = ["derive"], default-features = false }
serde-big-array = { version = "0.5.1" }
serde_json = { version = "1.0.120", default-features = false }
serde_yaml = { version = "0.9" }
subxt = { version = "0.37.0", features = ["unstable-reconnecting-rpc-client"] }
subxt-signer = "0.37.0"
syn = { version = "2.0.72" }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
