[package]
name = "node"
description = "A node running the runtime with pallet-contracts and pallet-contracts-evm"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap.workspace = true
futures.workspace = true
futures-timer.workspace = true
jsonrpsee = { version = "0.22", features = ["server"] }
serde_json = { workspace = true, default-features = true }
sc-cli.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sc-consensus.workspace = true
sc-consensus-manual-seal.workspace = true
sc-rpc-api.workspace = true
sc-basic-authorship.workspace = true
sc-offchain.workspace = true
sc-client-api.workspace = true
sp-timestamp.workspace = true
sp-keyring.workspace = true
sp-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
substrate-frame-rpc-system.workspace = true

frame = { workspace = true,  features = ["experimental", "runtime"] }
runtime = { path = "../runtime" }


hex-literal.workspace = true

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
