[package]
name = "node"
description = "A node running the runtime with pallet-contracts and pallet-contracts-evm"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap.workspace = true
futures.workspace = true
futures-timer.workspace = true
jsonrpsee = { version = "0.23.2", features = ["server"] }
serde_json = { workspace = true, default-features = true }
hex-literal.workspace = true
polkadot-sdk = { workspace = true, features = ["experimental", "node"] }

runtime = { path = "../runtime" }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = []
runtime-benchmarks = ["polkadot-sdk/runtime-benchmarks"]
try-runtime = ["polkadot-sdk/try-runtime"]
