[package]
name = "pallet-contracts-evm"
description = "An EVM compatibility layer for pallet-contracts"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = {  workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame = { workspace = true,  default-features = false, features = ["experimental", "runtime"] }
eth-rpc-api = { path = "../../rpc/api", default-features = false  } # TODO move shared stuff to primitives
primitives = { package = "pallet-contracts-evm-primitives", path = "../primitives", default-features = false }
log = { workspace = true }
pallet-contracts.workspace = true

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame/std",
	"scale-info/std",
	"log/std",
	"eth-rpc-api/std",
	"pallet-contracts/std",
	"primitives/std",
]
