[package]
name = "pallet-contracts-evm-primitives"
description = "primitive types for the pallet-contracts-evm"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
frame = {workspace = true, default-features = false, features = ["experimental", "runtime"] }
serde = { workspace = true, features = ["alloc", "derive"] }
ethereum-types = { workspace = true, features = ["serialize", "rlp"], default-features = false }
rlp = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
eth-rpc-api = { path = "../../rpc/api", default-features = false }

[dev-dependencies]
serde_json = "1.0.117"

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame/std",
	"scale-info/std",
	"rlp/std",
	"serde/std",
	"ethereum-types/std",
	"eth-rpc-api/std",
	"hex/std"
]
