[package]
name = "runtime"
description = "A solochain runtime template built with Substrate, part of Polkadot Sdk. (polkadot v1.12.0)"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false


[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

pallet-contracts-evm = { path = "../pallet-contracts-evm", default-features = false }
pallet-contracts-evm-primitives = { path = "../primitives", default-features = false }
eth-rpc-api = { path = "../../rpc/api", default-features = false }                     # Move to shared primitives stuff?

# genesis builder that allows us to interact with runtime genesis config
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"] }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = [
	"substrate-wasm-builder",
] }

[features]
default = ["std"]
std = [
	"eth-rpc-api/std",
	"pallet-contracts-evm-primitives/std",
	"pallet-contracts-evm/std",
	"parity-scale-codec/std",
	"polkadot-sdk/std",
	"scale-info/std",
]

[package.metadata.cargo-machete]
ignored = ["parity-scale-codec", "scale-info"]
