[package]
name = "eth-rpc-api"
description = "RPC traits and types for Ethereum JSON-RPC API"
version = "0.1.0"
license = "MIT-0"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame = {workspace = true, default-features = false, features = ["experimental", "runtime"] }
serde = { workspace = true, features = ["alloc", "derive"] }
ethereum-types = { workspace = true,  features = ["serialize", "codec", "rlp"], default-features = false }
rlp = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
jsonrpsee = { workspace = true, optional = true }
secp256k1 = { workspace = true, features = ["recovery"], optional = true }
derive_more.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"], default-features = false }
scale-info = { workspace = true, features = ["derive"], default-features = false }

[dev-dependencies]
serde_json.workspace = true
hex-literal.workspace = true
pretty_assertions.workspace = true

[features]
default = ["std"]
std = [
	"secp256k1",
	"jsonrpsee",
	"parity-scale-codec/std",
	"scale-info/std",
	"rlp/std",
	"serde/std",
	"ethereum-types/std",
	"frame/std",
	"hex/std",
	"serde_json/std"
]
