[package]
name = "eth-rpc-api_codegen"
version.workspace = true
edition.workspace = true

[dependencies]
Inflector.workspace = true
hex = { workspace = true, features = [ "serde"] }
indoc.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true 
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true


