[package]
name = "eth-rpc-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
Inflector.workspace = true
indoc.workspace = true
lazy_static.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = ["std"]
std = ["serde/std", "serde_json/std"]
